# trial-contract-google-langextract

./: .gitignore  README.md  extraction_results.jsonl  main.py  pyproject.toml  visualization.html
